调整事件监听

--- a/docs/guide/功能详情/监听和发送事件.md
+++ b/docs/guide/功能详情/监听和发送事件.md
@@ -15,9 +15,9 @@
 
 监听事件。
 
-让 `listener` 监听 `event_type`，当事件发生时自动运行 `listener`。
+让 `listener` 监听 `event_type`，当事件发生时自动运行 `listener`；如果 `listener` 已经在监听 `event_type`，则调用本函数不会有任何效果。
 
-如果 `listener` 已经在监听 `event_type`，则调用本函数不会有任何效果。
+当 `eventOn` 所在的前端界面/脚本关闭时，监听将会自动卸载。
 
 ```typescript
 function eventOn<T extends EventType>(
@@ -64,6 +64,8 @@ function detectMessageEdited(message_id) {
 
 监听脚本库中的按键事件。
 
+当 `eventOnButton` 所在的前端界面/脚本关闭时，监听将会自动卸载。
+
 ```typescript
 function eventOnButton<T extends EventType>(event_type: T, listener: ListenerType[T]): void
 ```
@@ -88,9 +90,9 @@ eventOnButton("按键名称", 要注册的函数);
 
 ## eventMakeLast <Badge type="warning" text="🚫TavernHelper" />
 
-让 `listener` 监听 `event_type`，当事件发生时自动在最后运行 `listener`。
+让 `listener` 监听 `event_type`，当事件发生时自动在最后运行 `listener`。如果 `listener` 已经在监听 `event_type`，则调用本函数会将 `listener` 调整为最后运行。
 
-如果 `listener` 已经在监听 `event_type`，则调用本函数会将 `listener` 调整为最后运行。
+当 `eventMakeLast` 所在的前端界面/脚本关闭时，监听将会自动卸载。
 
 ```typescript
 function eventMakeLast<T extends EventType>(
@@ -119,9 +121,9 @@ eventMakeLast(要监听的事件, 要注册的函数);
 
 ## eventMakeFirst <Badge type="warning" text="🚫TavernHelper" />
 
-让 `listener` 监听 `event_type`，当事件发生时自动在最先运行 `listener`。
+让 `listener` 监听 `event_type`，当事件发生时自动在最先运行 `listener`；如果 `listener` 已经在监听 `event_type`，则调用本函数会将 `listener` 调整为最先运行。
 
-如果 `listener` 已经在监听 `event_type`，则调用本函数会将 `listener` 调整为最先运行。
+当 `eventMakeFirst` 所在的前端界面/脚本关闭时，监听将会自动卸载。
 
 ```typescript
 function eventMakeFirst<T extends EventType>(
@@ -150,9 +152,9 @@ eventMakeFirst(要监听的事件, 要注册的函数);
 
 ## eventOnce <Badge type="warning" text="🚫TavernHelper" />
 
-让 `listener` 仅监听下一次 `event_type`，当该次事件发生时运行 `listener`, 此后取消监听。
+让 `listener` 仅监听下一次 `event_type`，当该次事件发生时运行 `listener`, 此后取消监听；如果 `listener` 已经在监听 `event_type`，则调用本函数不会有任何效果。
 
-如果 `listener` 已经在监听 `event_type`，则调用本函数不会有任何效果。
+当 `eventOnce` 所在的前端界面/脚本关闭时, 监听将会自动卸载.
 
 ```typescript
 function eventOnce<T extends EventType>(
@@ -177,71 +179,6 @@ function eventOnce<T extends EventType>(
 
 ```typescript
 eventOnce(要监听的事件, 要注册的函数);
-```
-
-## eventWaitOnce <Badge type="warning" text="🚫TavernHelper" />
-
-等待一次 `event_type` 事件发生，返回事件数据。
-
-```typescript
-function eventWaitOnce(event_type: EventType): Promise<any | undefined>;
-```
-
-### 参数
-
-#### `event_type`
-
-- **类型**: [`EventType`](./监听和发送事件#事件列表)
-- **描述**: 要等待的事件
-
-### 返回值
-
-- **类型**: `Promise<any | undefined>`
-- **描述**: 返回事件传递的数据
-
-### 示例
-
-```typescript
-const messageId = await eventWaitOnce(tavern_events.MESSAGE_DELETED);
-console.log(`消息 ${messageId} 被删除了`);
-```
-
-## eventWaitOnce <Badge type="warning" text="🚫TavernHelper" />
-
-等待 `listener` 监听到一次 `event_type` 且执行完成，返回 `listener` 的执行结果。
-
-在调用本函数前, `listener` 必须已经在监听 `event_type`。
-
-```typescript
-function eventWaitOnce<T extends EventType>(
-  event_type: T,
-  listener: ListenerType[T],
-): Promise<any | undefined>;
-```
-
-### 参数
-
-#### `event_type`
-
-- **类型**: [`EventType`](./监听和发送事件#事件列表)
-- **描述**: `listener` 在监听的事件
-
-#### `listener`
-
-- **类型**: `Function`
-- **描述**: 已经在监听 `event_type` 的函数
-
-### 返回值
-
-- **类型**: `Promise<any | undefined>`
-- **描述**: 返回 `listener` 的执行结果
-
-### 示例
-
-```typescript
-eventOnce("存档", save);
-const result = await eventWaitOnce("存档", save);
-console.log(`存档结果: ${result}`);
 ```
 
 ## eventEmit <Badge type="warning" text="🚫TavernHelper" />
@@ -315,9 +252,9 @@ function eventEmitAndWait<T extends EventType>(
 
 ## eventRemoveListener <Badge type="warning" text="🚫TavernHelper" />
 
-让 `listener` 取消对 `event_type` 的监听。
+让 `listener` 取消对 `event_type` 的监听；如果 `listener` 没有监听 `event_type`，则调用本函数不会有任何效果。
 
-如果 `listener` 没有监听 `event_type`，则调用本函数不会有任何效果。
+前端界面/脚本关闭时会自动卸载所有的事件监听，你不必手动调用 `eventRemoveListener` 来移除。
 
 ```typescript
 function eventRemoveListener<T extends EventType>(
@@ -348,6 +285,8 @@ eventRemoveListener(要取消监听的事件, 要取消注册的函数);
 
 取消本 iframe 中对 `event_type` 的所有监听。
 
+前端界面/脚本关闭时会自动卸载所有的事件监听，你不必手动调用 `eventClearEvent` 来移除。
+
 ```typescript
 function eventClearEvent(event_type: EventType): void;
 ```
@@ -363,6 +302,8 @@ function eventClearEvent(event_type: EventType): void;
 
 取消本 iframe 中 `listener` 的所有监听。
 
+前端界面/脚本关闭时会自动卸载所有的事件监听，你不必手动调用 `eventClearListener` 来移除。
+
 ```typescript
 function eventClearListener(listener: Function): void;
 ```
@@ -377,6 +318,8 @@ function eventClearListener(listener: Function): void;
 ## eventClearAll <Badge type="warning" text="🚫TavernHelper" />
 
 取消本 iframe 中对所有事件的所有监听。
+
+前端界面/脚本关闭时会自动卸载所有的事件监听，你不必手动调用 `eventClearAll` 来移除。
 
 ```typescript
 function eventClearAll(): void;
