--- a/docs/guide/基本用法/脚本库.md
+++ b/docs/guide/基本用法/脚本库.md
@@ -75,12 +75,12 @@ order: 2
 
 #### 绑定方法
 
-按键绑定功能需要配合 [`eventOnButton`](/guide/功能详情/监听和发送事件#eventonbutton) 使用，在脚本中添加以下代码：
+按键绑定功能需要配合 [`getButtonEvent`](/guide/功能详情/脚本按钮) 使用，在脚本中添加以下代码：
 
 ```javascript
-eventOnButton('button_name', function(){
-    // 在这里编写按键触发后的具体逻辑
-    console.log('按键被点击');
+eventOn(getButtonEvent('按钮名称'), () => {
+  // 在这里编写按键触发后的具体逻辑
+  console.log('按键被点击');
 });
 ```
 
