--- a/docs/guide/功能详情/请求生成.md
+++ b/docs/guide/功能详情/请求生成.md
@@ -5,7 +5,7 @@
 :::
 
 酒馆助手提供了函数用于更加灵活地请求 AI 生成回复，你可以通过它来自定义生成时要采用的提示词配置。
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/generate.d.ts)
+[点击查看对应类型定义文件（可发给 AI 或 IDE 使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/generate.d.ts)
 
 :::warning
 目前仅支持聊天补全（`Chat Completion`）。
@@ -35,10 +35,15 @@ function generate(config: GenerateConfig): Promise<string>;
 #### `image?`
 
 - **类型**: `File|string[]`
-- **描述**:  图片输入，支持以数组形式输入多张图片：
+- **描述**: 图片输入，支持以数组形式输入多张图片：
   - `File` 对象：通过 `input[type="file"]` 获取的文件对象
   - `Base64` 字符串：图片的 base64 编码
   - `URL` 字符串：图片的在线地址
+
+#### `custom_api?`
+
+- **类型**: `CustomApiConfig`
+- **描述**: 自定义 API 配置，具体见[CustomApiConfig 参数详情](./请求生成#customapiconfig)
 
 #### `overrides?`
 
@@ -113,10 +118,16 @@ function generateRaw(config: GenerateConfig): Promise<string>;
 #### `image?`
 
 - **类型**: `File|string[]`
-- **描述**:  图片输入，支持以数组形式输入多张图片：
+- **描述**: 图片输入，支持以数组形式输入多张图片：
+
   - `File` 对象：通过 `input[type="file"]` 获取的文件对象
   - `Base64` 字符串：图片的 base64 编码
   - `URL` 字符串：图片的在线地址
+
+#### `custom_api?`
+
+- **类型**: `CustomApiConfig`
+- **描述**: 自定义 API 配置，具体见[CustomApiConfig 参数详情](./请求生成#customapiconfig)
 
 #### `overrides?`
 
@@ -149,14 +160,14 @@ function generateRaw(config: GenerateConfig): Promise<string>;
 ```typescript
 // 自定义内置提示词顺序, 未在 ordered_prompts 中给出的将不会被使用
 const result = await generateRaw({
-  user_input: '你好',
+  user_input: "你好",
   ordered_prompts: [
-    'char_description',
-    { role: 'system', content: '系统提示' },
-    'chat_history',
-    'user_input',
-  ]
-})
+    "char_description",
+    { role: "system", content: "系统提示" },
+    "chat_history",
+    "user_input",
+  ],
+});
 ```
 
 ## 通过事件获取生成结果
@@ -292,32 +303,31 @@ const result = await generateRaw({
 
 ```typescript
 const builtin_prompt_default_order: BuiltinPrompt[] = [
-  'world_info_before',    // 世界书(角色定义前)
-  'persona_description',  // 用户描述
-  'char_description',     // 角色描述
-  'char_personality',     // 角色性格
-  'scenario',             // 场景
-  'world_info_after',     // 世界书(角色定义后)
-  'dialogue_examples',    // 对话示例
-  'chat_history',         // 聊天历史 (含世界书中按深度插入的条目、作者注释)
-  'user_input',           // 用户输入
-]
+  "world_info_before", // 世界书(角色定义前)
+  "persona_description", // 用户描述
+  "char_description", // 角色描述
+  "char_personality", // 角色性格
+  "scenario", // 场景
+  "world_info_after", // 世界书(角色定义后)
+  "dialogue_examples", // 对话示例
+  "chat_history", // 聊天历史 (含世界书中按深度插入的条目、作者注释)
+  "user_input", // 用户输入
+];
 ```
 
 仅以下字符串可被 `generateRaw` 识别：
 
 ```typescript
 type BuiltinPrompt =
-  | 'world_info_before'    // 世界书(角色定义前)
-  | 'persona_description'  // 用户描述
-  | 'char_description'     // 角色描述
-  | 'char_personality'     // 角色性格
-  | 'scenario'             // 场景
-  | 'world_info_after'     // 世界书(角色定义后)
-  | 'dialogue_examples'    // 对话示例
-  | 'chat_history'         // 聊天历史 (含世界书中按深度插入的条目、作者注释)
-  | 'user_input'           // 用户输入
-  ;
+  | "world_info_before" // 世界书(角色定义前)
+  | "persona_description" // 用户描述
+  | "char_description" // 角色描述
+  | "char_personality" // 角色性格
+  | "scenario" // 场景
+  | "world_info_after" // 世界书(角色定义后)
+  | "dialogue_examples" // 对话示例
+  | "chat_history" // 聊天历史 (含世界书中按深度插入的条目、作者注释)
+  | "user_input"; // 用户输入
 ```
 
 **`user_input`与`chat_history`的关系：**
@@ -333,3 +343,30 @@ type BuiltinPrompt =
 
 - 如果`user_input`未在 `ordered_prompts` 中：将自动插入到最新一条聊天记录后
 - 如果`user_input`在 `ordered_prompts` 中：`user_input`和`chat_history`会分别插入到 `ordered_prompts` 中指示的位置
+
+### `CustomApiConfig`
+
+#### `apiurl?`
+
+- **类型**: `string`
+- **描述**: 自定义 API 地址
+
+#### `key?`
+
+- **类型**: `string`
+- **描述**: API 密钥
+
+#### `model?`
+
+- **类型**: `string`
+- **描述**: 模型名称
+
+#### `source?`
+
+- **类型**: `string`
+- **描述**: API 源，默认为 `'openai'`
+
+:::warning
+`source` 参数用于指定 API 源，目前支持的源请查看酒馆官方代码[`SillyTavern/src/constants.js`](https://github.com/SillyTavern/SillyTavern/blob/2e3dff73a127679f643e971801cd51173c2c34e7/src/constants.js#L164)（可点击跳转）所列出的源。
+但由于是通过强制使用反代来做到自定义 API，所以可能不支持在酒馆中未提供反向代理选项的聊天补全来源，但主流的`openai`、`claude`、`makersuite`(gemini)、`deepseek`都支持。
+:::
