修改变量管理器

--- a/docs/guide/基本用法/变量管理器.md
+++ b/docs/guide/基本用法/变量管理器.md
@@ -4,13 +4,25 @@ order: 3
 
 # 变量管理器
 
-:::tip
-请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
-:::
-
 变量管理器允许用户查看、编辑并实时监听不同作用域下的变量。这对于调试脚本、理解功能运行状态以及动态调整参数都非常有帮助。
 
 ![变量管理器](/变量管理器.gif)
+
+## 功能入口
+
+变量管理器有两个快捷入口：
+
+- 入口1：在酒馆助手的工具箱中，点击“变量管理器”按钮
+![变量管理器入口1](/变量管理器入口1.png)
+
+- 入口2：在酒馆发送栏的左侧，点击魔法棒图标内的“变量管理器”按钮
+![变量管理器入口2](/变量管理器入口2.png)
+
+## UI特性
+
+- 界面浮窗将始终显示在酒馆的最上层，不会被其他窗口遮挡
+- 可自由拖动，调整位置
+- 电脑端直接拖动边缘修改窗口大小，手机端需要按住右下角修改
 
 ## 主要功能
 
@@ -39,12 +51,3 @@ order: 3
   * 点击保存后，相关的脚本或功能会立即使用新的变量值。
 * **实时监听:**
   * 变量管理器会自动监听变量的变化。当任何一个被管理的变量发生改变时，其在界面上显示的值会立即更新，无需手动刷新。
-
-::: tip
-变量管理器有两个快捷入口：
-
-<div style="display: flex; gap: 10px; align-items: flex-start;">
-  <img src="/快捷入口1.png" style="height: 200px; width: auto;">
-  <img src="/快捷入口2.png" style="height: 200px; width: auto;">
-</div>
-:::
