提示词查看器与脚本库

--- a/docs/guide/基本用法/脚本库.md
+++ b/docs/guide/基本用法/脚本库.md
@@ -10,13 +10,13 @@ order: 2
 
 脚本库是酒馆助手的核心功能之一，用于管理和执行自动化脚本，前身为全局脚本，现在具有更完整的管理和编辑功能。
 
-![脚本库示例](/脚本库.jpg)
+![脚本库示例](/脚本库.png)
 
 ## 全局/局部脚本库
 
 脚本库分为**全局脚本库**和**局部脚本库**两个部分
 
-其中，
+其中:
 
 - **全局脚本库**：适用于酒馆所有聊天
 - **局部脚本库**：适用于当前角色卡，会随角色卡一同导出
@@ -31,9 +31,23 @@ order: 2
 - **删除**：移除脚本
 - **批量操作**：批量对脚本进行导出、删除、移动到文件夹等操作
 
+## 脚本组
+
+脚本组可用于将多个脚本集中到一个组里，方便管理和执行。
+
+![脚本组](/脚本库文件夹.png)
+
+### 脚本组功能
+
+- 批量导出文件夹内的脚本为zip压缩文件，导入时可直接选择zip文件导入，会保持原有的脚本组结构
+- 批量开关脚本组内所有脚本
+- 自定义组的图标和颜色
+
+![脚本组自定义](/脚本组自定义.png)
+
 ## 脚本编辑
 
-![脚本编辑](/脚本编辑.jpg)
+![脚本编辑](/脚本编辑.png)
 
 ### 脚本内容
 
@@ -60,13 +74,19 @@ order: 2
   4. 更新记录
   5. 注意事项
 
+### 变量列表
+
+为当前脚本绑定变量，可以随着脚本一同导出，也可在导出时清空防止敏感信息泄露。
+
+![导出脚本变量](/导出脚本变量.png)
+
 ### 按键绑定
 
-可以为脚本添加按键绑定，当按下指定按键时，会触发脚本运行。
+可以为脚本添加多个按键绑定，当按下按键时，会触发脚本内指定功能运行。
 
 ![按键触发](/按键触发.jpg)
 
-#### UI说明
+#### 按键绑定的UI说明
 
 - 拖动控件：对按键的顺序进行调整
 - 复选框：是否显示按键
@@ -92,13 +112,11 @@ eventOn(getButtonEvent('按钮名称'), () => {
 
 点击全局/局部脚本库旁边的齿轮按钮，可以对脚本进行批量导出、删除、移动等操作。
 
+![批量操作](/脚本库批量操作.png)
+
 - 批量导出：导出选中的脚本
 - 批量删除：删除选中的脚本
 - 批量移动：移动选中的脚本到某个文件夹
-
-## 脚本组
-
-脚本组可用于将多个脚本集中到一个组里，方便管理和执行。
 
 ## 内置脚本库
 
