同步预设更新

--- a/docs/guide/功能详情/预设操作/创建预设.md
+++ b/docs/guide/功能详情/预设操作/创建预设.md
@@ -107,15 +107,15 @@ type PresetPrompt = {
     | 'main'
     | 'nsfw'
     | 'jailbreak'
-    | 'enhance_definitions'
-    | 'world_info_before'
-    | 'persona_description'
-    | 'char_description'
-    | 'char_personality'
+    | 'enhanceDefinitions'
+    | 'worldInfoBefore'
+    | 'personaDescription'
+    | 'charDescription'
+    | 'charPersonality'
     | 'scenario'
-    | 'world_info_after'
-    | 'dialogue_examples'
-    | 'chat_history',
+    | 'worldInfoAfter'
+    | 'dialogueExamples'
+    | 'chatHistory',
     string
   >;
   name: string;
@@ -124,9 +124,15 @@ type PresetPrompt = {
   /**
    * 插入位置, 仅用于普通和占位符提示词
    *   - `'relative'`: 按提示词相对位置插入
-   *   - `number`: 插入到聊天记录的对应深度
+   *   - `'in_chat'`: 插入到聊天记录的对应深度, 需要设置对应的深度 `depth` 和顺序 `order`
    */
-  position?: 'relative' | number;
+  position:
+    | {
+        type: 'relative';
+        depth?: never;
+        order?: never;
+      }
+    | { type: 'in_chat'; depth: number; order: number };
   role: 'system' | 'user' | 'assistant';
   /** 仅用于普通和系统提示词 */
   content?: string;
@@ -136,26 +142,26 @@ type PresetPrompt = {
 };
 type PresetNormalPrompt = SetRequired<{ id: string } & Omit<PresetPrompt, 'id'>, 'position' | 'content'>;
 type PresetSystemPrompt = SetRequired<
-  { id: 'main' | 'nsfw' | 'jailbreak' | 'enhance_definitions' } & Omit<PresetPrompt, 'id'>,
+  { id: 'main' | 'nsfw' | 'jailbreak' | 'enhanceDefinitions' } & Omit<PresetPrompt, 'id'>,
   'content'
 >;
 type PresetPlaceholderPrompt = SetRequired<
   {
     id:
-      | 'world_info_before'
-      | 'persona_description'
-      | 'char_description'
-      | 'char_personality'
+      | 'worldInfoBefore'
+      | 'personaDescription'
+      | 'charDescription'
+      | 'charPersonality'
       | 'scenario'
-      | 'world_info_after'
-      | 'dialogue_examples'
-      | 'chat_history';
+      | 'worldInfoAfter'
+      | 'dialogueExamples'
+      | 'chatHistory';
   } & Omit<PresetPrompt, 'id'>,
   'position'
 >;
-function isPresetNormalPrompt(prompt: PresetPrompt): prompt is PresetNormalPrompt;
-function isPresetSystemPrompt(prompt: PresetPrompt): prompt is PresetSystemPrompt;
-function isPresetPlaceholderPrompt(prompt: PresetPrompt): prompt is PresetPlaceholderPrompt;
+declare function isPresetNormalPrompt(prompt: PresetPrompt): prompt is PresetNormalPrompt;
+declare function isPresetSystemPrompt(prompt: PresetPrompt): prompt is PresetSystemPrompt;
+declare function isPresetPlaceholderPrompt(prompt: PresetPrompt): prompt is PresetPlaceholderPrompt;
 ```
 
 ```typescript [default_preset]
