--- a/docs/guide/基本用法/提示词查看.md
+++ b/docs/guide/基本用法/提示词查看.md
@@ -62,4 +62,7 @@
 
 ![提示词查看仅显示匹配](/提示词查看仅显示匹配搜索.png)
 
+### 消息合并提示
+
+如果打开了预设的“压缩系统消息”，或者API中的“提示词后处理”，则会在提示词查看器中展示处理后实际发送给AI的消息，此时消息结构会与酒馆界面展示的有所不同，为提示用户，会在查看器中显示警告消息。
 
