iframe_client -> iframe

--- a/docs/guide/功能详情/监听和发送事件.md
+++ b/docs/guide/功能详情/监听和发送事件.md
@@ -5,7 +5,7 @@
 :::
 
 扩展允许你设置当发生某种事件时，运行想要的函数。例如，你也许想在玩家擅自更改你的世界书时警告玩家。
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe_client/event.d.ts)
+[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe/event.d.ts)
 
 可以处理的事件请查看[事件列表](./监听和发送事件#事件列表)。
 
