--- a/docs/guide/功能详情/接口访问.md
+++ b/docs/guide/功能详情/接口访问.md
@@ -8,7 +8,7 @@
 
 ## SillyTavern
 
-通过 `SillyTavern`，你可以访问酒馆提供给扩展的稳定接口。酒馆助手为它们额外提供了[类型定义](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe_client/exported.sillytavern.d.ts)。
+通过 `SillyTavern`，你可以访问酒馆提供给扩展的稳定接口。酒馆助手为它们额外提供了[类型定义](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe/exported.sillytavern.d.ts)。
 
 而酒馆助手在酒馆接口之外，提供了更多更直接的功能。
 
@@ -48,7 +48,7 @@ alert(TavernHelper.getCharAvatarPath());
 
 ## 提示词模板
 
-通过 `EjsTemplate`，你可以访问[提示词模板](https://github.com/zonde306/ST-Prompt-Template)提供的接口。酒馆助手为它们额外提供了[类型定义](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe_client/exported.ejstemplate.d.ts)。
+通过 `EjsTemplate`，你可以访问[提示词模板](https://github.com/zonde306/ST-Prompt-Template)提供的接口。酒馆助手为它们额外提供了[类型定义](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe/exported.ejstemplate.d.ts)。
 
 ```typescript
 /**
@@ -60,7 +60,7 @@ const EjsTemplate;
 
 ## MVU 变量框架
 
-通过 `Mvu`，你可以访问[MVU 变量框架](https://github.com/MagicalAstrogy/MagVarUpdate)提供的接口。酒馆助手为它们额外提供了[类型定义](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe_client/exported.mvu.d.ts)。
+通过 `Mvu`，你可以访问[MVU 变量框架](https://github.com/MagicalAstrogy/MagVarUpdate)提供的接口。酒馆助手为它们额外提供了[类型定义](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe/exported.mvu.d.ts)。
 
 ```typescript
 /**
