补充新函数

--- a/docs/guide/功能详情/接口访问.md
+++ b/docs/guide/功能详情/接口访问.md
@@ -8,7 +8,7 @@
 
 ## SillyTavern
 
-通过 `SillyTavern`，你可以访问酒馆提供给扩展的稳定接口。酒馆助手为它们额外提供了[类型定义](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe/exported.sillytavern.d.ts)。
+通过 `SillyTavern`，你可以访问酒馆提供给扩展的稳定接口。酒馆助手为它们额外提供了[类型定义](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe/exported.sillytavern.d.ts)并额外导出了[一些接口](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/builtin.d.ts)。
 
 而酒馆助手在酒馆接口之外，提供了更多更直接的功能。
 
@@ -20,6 +20,11 @@
  * 你也可以在酒馆页面按 f12, 在控制台中输入 `window.SillyTavern.getContext()` 来查看当前酒馆所提供的接口
  */
 const SillyTavern;
+```
+
+```typescript [builtin]
+/** 除了酒馆本来导出的接口, 酒馆助手额外导出了一些酒馆接口 */
+const builtin;
 ```
 
 :::
