--- a/docs/guide/功能详情/脚本功能.md
+++ b/docs/guide/功能详情/脚本功能.md
@@ -1,10 +1,12 @@
-# 脚本按钮
+# 脚本功能
 
 :::tip
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[脚本可以添加按钮](/guide/基本用法/脚本库), 而此处是按钮相关的函数
+[脚本可以添加按钮，可以设置注释](/guide/基本用法/脚本库)
+
+[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe/script.d.ts)
 
 <CustomTOC />
 
@@ -138,4 +140,45 @@ function appendInexistentScriptButtons(script_id: string, buttons: ScriptButton[
 
 ```typescript [新增 "重新开始" 按钮（如果不存在的话）]
 appendInexistentScriptButtons(getScriptId(), [{name: '重新开始', visible: true}]);
+```
+
+## getScriptInfo
+
+获取脚本作者注释
+
+```typescript
+function getScriptInfo(): string;
+```
+
+### 返回值
+
+- **类型**: `string`
+- **描述**: 脚本作者注释
+
+### 示例
+
+```typescript [获取脚本作者注释]
+const info = getScriptInfo();
+console.log('脚本作者注释:', info);
+```
+
+## replaceScriptInfo
+
+替换脚本作者注释
+
+```typescript
+function replaceScriptInfo(info: string): void;
+```
+
+### 参数
+
+#### `info`
+
+- **类型**: `string`
+- **描述**: 新的作者注释
+
+### 示例
+
+```typescript [替换脚本作者注释]
+replaceScriptInfo('新的作者注释');
 ```
