--- a/docs/guide/功能详情/请求生成.md
+++ b/docs/guide/功能详情/请求生成.md
@@ -52,8 +52,8 @@ function generate(config: GenerateConfig): Promise<string>;
 
 #### `injects?`
 
-- **类型**: `InjectionPrompt[]`
-- **描述**: 要额外注入的提示词，具体见[InjectionPrompt 参数详情](./请求生成#injectionprompt)
+- **类型**: `Omit<InjectionPrompt, 'id'>[]`
+- **描述**: 要额外注入的提示词，具体见[InjectionPrompt 参数详情](./注入提示词#injectionprompt)
 
 #### `max_chat_history?`
 
@@ -136,8 +136,8 @@ function generateRaw(config: GenerateConfig): Promise<string>;
 
 #### `injects?`
 
-- **类型**: `InjectionRawPrompt[]`
-- **描述**: 要额外注入的提示词，具体见[InjectionRawPrompt 参数详情](./请求生成#injectionrawprompt)
+- **类型**: `Omit<InjectionPrompt, 'id'>[]`
+- **描述**: 要额外注入的提示词，具体见[InjectionPrompt 参数详情](./注入提示词#injectionprompt)
 
 #### `max_chat_history?`
 
@@ -229,61 +229,6 @@ const result = await generateRaw({
   - `with_depth_entries`: 是否启用世界书中按深度插入的条目; 默认为 `true`
   - `author_note`: 若设置, 覆盖 "作者注释" 为给定的字符串
   - `prompts`: 若设置, 覆盖 "聊天历史" 为给定的提示词，详见[RolePrompt 格式](./请求生成#roleprompt)
-
-### `InjectionPrompt`
-
-#### `role`
-
-- **类型**: `'system' | 'assistant' | 'user'`
-- **描述**: 角色
-
-#### `content`
-
-- **类型**: `string`
-- **描述**: 要注入的提示词
-
-#### `position`
-
-- **类型**: `'before_prompt' | 'in_chat' | 'after_prompt' | 'none'`
-- **描述**: 要注入的位置。`none` 不会发给 ai，但能用来激活世界书条目
-
-#### `depth`
-
-- **类型**: `number`
-- **描述**: 深度
-
-#### `should_scan`
-
-- **类型**: `boolean`
-
-- **描述**: 是否要加入世界书扫描中
-
-### `InjectionRawPrompt`
-
-#### `role`
-
-- **类型**: `'system' | 'assistant' | 'user'`
-- **描述**: 角色
-
-#### `content`
-
-- **类型**: `string`
-- **描述**: 要注入的提示词
-
-#### `position`
-
-- **类型**: `'in_chat' | 'none'`
-- **描述**: 要注入的位置。`none` 不会发给 ai，但能用来激活世界书条目
-
-#### `depth`
-
-- **类型**: `number`
-- **描述**: 深度
-
-#### `should_scan`
-
-- **类型**: `boolean`
-- **描述**: 是否要加入世界书扫描中
 
 ### `RolePrompt`
 
