--- a/docs/guide/基本用法/脚本库.md
+++ b/docs/guide/基本用法/脚本库.md
@@ -95,7 +95,7 @@ order: 2
 
 #### 绑定方法
 
-按键绑定功能需要配合 [`getButtonEvent`](/guide/功能详情/脚本按钮) 使用，在脚本中添加以下代码：
+按键绑定功能需要配合 [`getButtonEvent`](/guide/功能详情/脚本功能) 使用，在脚本中添加以下代码：
 
 ```javascript
 eventOn(getButtonEvent('按钮名称'), () => {
