补充 injectPrompts 的问题

--- a/docs/guide/功能详情/注入提示词.md
+++ b/docs/guide/功能详情/注入提示词.md
@@ -12,6 +12,11 @@
 
 注入提示词。
 
+这样注入的提示词仅在当前聊天文件中有效，
+
+- 如果需要跨聊天文件注入或在新开聊天时重新注入，你可以监听 `tavern_events.CHAT_CHANGED` 事件
+- 或者，可以监听 `tavern_events.GENERATION_AFTER_COMMANDS` 事件，在生成前注入
+
 :::code-group
 
 ```typescript [injectPrompts]
