--- a/docs/guide/功能详情/监听和发送事件.md
+++ b/docs/guide/功能详情/监听和发送事件.md
@@ -423,10 +423,10 @@ type ListenerType = {
     variables: Record<string, any>,
     message_info?: { message_id: number; swipe_id: number },
   ) => void;
-  [iframe_events.GENERATION_STARTED]: () => void;
-  [iframe_events.STREAM_TOKEN_RECEIVED_FULLY]: (full_text: string) => void;
-  [iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY]: (incremental_text: string) => void;
-  [iframe_events.GENERATION_ENDED]: (text: string) => void;
+  [iframe_events.GENERATION_STARTED]: (generation_id: string) => void;
+  [iframe_events.STREAM_TOKEN_RECEIVED_FULLY]: (full_text: string, generation_id: string) => void;
+  [iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY]: (incremental_text: string, generation_id: string) => void;
+  [iframe_events.GENERATION_ENDED]: (text: string, generation_id: string) => void;
 
   [tavern_events.APP_READY]: () => void;
   [tavern_events.EXTRAS_CONNECTED]: (modules: any) => void;
