--- a/docs/guide/功能详情/请求生成.md
+++ b/docs/guide/功能详情/请求生成.md
@@ -16,11 +16,69 @@
 
 使用 Silly Tavern 当前启用的预设，让 AI 生成一段文本。
 
-```typescript
+:::code-group
+
+```typescript [generate]
 function generate(config: GenerateConfig): Promise<string>;
 ```
 
+```typescript [GenerateConfig]
+type GenerateConfig = {
+  /** 用户输入 */
+  user_input?: string;
+
+  /**
+   * 图片输入，支持以下格式：
+   * - File 对象：通过 input[type="file"] 获取的文件对象
+   * - Base64 字符串：图片的 base64 编码
+   * - URL 字符串：图片的在线地址
+   */
+  image?: File | string | (File | string)[];
+
+  /**
+   * 是否启用流式传输; 默认为 `false`.
+   *
+   * 若启用流式传输, 每次得到流式传输结果时, 函数将会发送事件:
+   * - `iframe_events.STREAM_TOKEN_RECEIVED_FULLY`: 监听它可以得到流式传输的当前完整文本 ("这是", "这是一条", "这是一条流式传输")
+   * - `iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY`: 监听它可以得到流式传输的当前增量文本 ("这是", "一条", "流式传输")
+   *
+   * @example
+   * eventOn(iframe_events.STREAM_TOKEN_RECEIVED_FULLY, text => console.info(text));
+   */
+  should_stream?: boolean;
+
+  /**
+   * 覆盖选项. 若设置, 则 `overrides` 中给出的字段将会覆盖对应的提示词.
+   *   如 `overrides.char_description = '覆盖的角色描述';` 将会覆盖角色描述.
+   */
+  overrides?: Overrides;
+
+  /** 要额外注入的提示词 */
+  injects?: Omit<InjectionPrompt, 'id'>[];
+
+  /** 最多使用多少条聊天历史; 默认为 'all' */
+  max_chat_history?: 'all' | number;
+
+  /** 自定义API配置 */
+  custom_api?: CustomApiConfig;
+
+  /**
+   * 唯一id
+   *
+   * 可以并发生成，并可以通过stopGenerateById停止特定生成，不设置默认生成uuid，在发送的事件中也会返回该id
+   */
+  generation_id?: string;
+};
+```
+
+:::
+
 ### 参数
+
+#### `generation_id?`
+
+- **类型**: `string`
+- **描述**: 生成 ID。如果设置，可以通过事件监听接收某一特定请求的生成结果。以及中止特定id的请求。具体见[函数的事件发送](./请求生成#函数的事件发送)，不提供时，则使用随机uuid作为id。
 
 #### `user_input?`
 
@@ -99,11 +157,80 @@ const result = await generate({
 
 不使用 SillyTavern 当前启用的预设，让 AI 生成一段文本。
 
-```typescript
+:::code-group
+
+```typescript [generateRaw]
 function generateRaw(config: GenerateConfig): Promise<string>;
 ```
 
+```typescript [GenerateConfig]
+type GenerateRawConfig = {
+  /**
+   * 用户输入.
+   *
+   * 如果设置, 则无论 ordered_prompts 中是否有 'user_input' 都会加入该用户输入提示词; 默认加入在 'chat_history' 末尾.
+   */
+  user_input?: string;
+
+  /**
+   * 图片输入，支持以下格式：
+   * - File 对象：通过 input[type="file"] 获取的文件对象
+   * - Base64 字符串：图片的 base64 编码
+   * - URL 字符串：图片的在线地址
+   */
+  image?: File | string | (File | string)[];
+
+  /**
+   * 是否启用流式传输; 默认为 `false`.
+   *
+   * 若启用流式传输, 每次得到流式传输结果时, 函数将会发送事件:
+   * - `ifraem_events.STREAM_TOKEN_RECEIVED_FULLY`: 监听它可以得到流式传输的当前完整文本 ("这是", "这是一条", "这是一条流式传输")
+   * - `iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY`: 监听它可以得到流式传输的当前增量文本 ("这是", "一条", "流式传输")
+   *
+   * @example
+   * eventOn(iframe_events.STREAM_TOKEN_RECEIVED_FULLY, text => console.info(text));
+   */
+  should_stream?: boolean;
+
+  /**
+   * 覆盖选项. 若设置, 则 `overrides` 中给出的字段将会覆盖对应的提示词.
+   *   如 `overrides.char_description = '覆盖的角色描述';` 将会覆盖提示词
+   */
+  overrides?: Overrides;
+
+  injects?: Omit<InjectionPrompt, 'id'>[];
+
+  /**
+   * 一个提示词数组, 数组元素将会按顺序发给 ai, 因而相当于自定义预设. 该数组允许存放两种类型:
+   * - `BuiltinPrompt`: 内置提示词. 由于不使用预设, 如果需要 "角色描述" 等提示词, 你需要自己指定要用哪些并给出顺序
+   *                      如果不想自己指定, 可通过 `builtin_prompt_default_order` 得到酒馆默认预设所使用的顺序 (但对于这种情况, 也许你更应该用 `generate`).
+   * - `RolePrompt`: 要额外给定的提示词.
+   */
+  ordered_prompts?: (BuiltinPrompt | RolePrompt)[];
+
+  /** 最多使用多少条聊天历史; 默认为 'all' */
+  max_chat_history?: 'all' | number;
+
+  /** 自定义API配置 */
+  custom_api?: CustomApiConfig;
+
+  /**
+   * 唯一id
+   *
+   * 可以并发生成，并可以通过stopGenerateById停止特定生成，不设置默认生成uuid，在发送的事件中也会返回该id
+   */
+  generation_id?: string;
+};
+```
+:::
+
+
 ### 参数
+
+#### `generation_id?`
+
+- **类型**: `string`
+- **描述**: 生成 ID。如果设置，可以通过事件监听接收某一特定请求的生成结果。以及中止特定id的请求。具体见[函数的事件发送](./请求生成#函数的事件发送)，不提供时，则使用随机uuid作为id。
 
 #### `user_input?`
 
@@ -180,6 +307,13 @@ const result = await generateRaw({
 - 若启用流式传输, `iframe_events.STREAM_TOKEN_RECEIVED_FULLY`：监听它可以得到流式传输的当前完整文本 ("这是", "这是一条", "这是一条流式传输")
 - 若启用流式传输, `iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY`：监听它可以得到流式传输的当前增量文本 ("这是", "一条", "流式传输")
 - `iframe_events.GENERATION_ENDED`：生成结束, 监听它可以得到生成的最终文本 (当然也能通过函数返回值获得)
+- 生成时将一同发送generation_id
+```typescript
+  [iframe_events.GENERATION_STARTED]: (generation_id: string) => void;
+  [iframe_events.STREAM_TOKEN_RECEIVED_FULLY]: (full_text: string, generation_id: string) => void;
+  [iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY]: (incremental_text: string, generation_id: string) => void;
+  [iframe_events.GENERATION_ENDED]: (text: string, generation_id: string) => void;
+```
 
 ### 示例
 
