docs: 单独页面提醒在其他插件中如何使用

--- a/docs/guide/功能详情/接口访问.md
+++ b/docs/guide/功能详情/接口访问.md
@@ -38,7 +38,7 @@ alert(JSON.stringify(SillyTavern.chat[0]));
 
 ## TavernHelper
 
-通过 `TavernHelper`，其他扩展也可以访问酒馆助手提供的稳定接口，可用接口为功能详情中的全部内容。
+通过 `TavernHelper`，其他扩展也可以访问酒馆助手提供的稳定接口，可用接口为功能详情中的全部内容。（当然我更建议你编写[酒馆助手脚本](/guide/基本用法/如何正确使用酒馆助手.md)而非酒馆插件）
 
 ### 示例
 
