补充内置第三方库

--- a/docs/guide/功能详情/其他辅助功能/内置第三方库.md
+++ b/docs/guide/功能详情/其他辅助功能/内置第三方库.md
@@ -24,7 +24,7 @@
 
 ## JQuery
 
-通过 JQuery，你可以很方便地设置界面 DOM 元素。
+用 `$` 变量访问. 通过它, 你可以很方便地设置界面 DOM 元素。
 
 :::info 示例： 向 body 末尾添加一行文本
 
@@ -64,9 +64,13 @@
 
 :::
 
+## jquery-ui-touch-punch
+
+修复 jquery-ui 在移动端无法正常使用的问题.
+
 ## Lodash
 
-通过 Lodash，你可以很方便地对 Array、Object 等类型进行操作。
+用 `_` 变量访问. 通过它, 你可以很方便地对 Array、Object 等类型进行操作。
 
 :::info 示例
 :::code-group
@@ -99,6 +103,10 @@
 
 :::
 
+## Pixi.JS
+
+用 `PIXI` 变量访问. 通过它, 你可以很方便地创建 2D 游戏界面、live2d 立绘等.
+
 ## tailwindcss
 
 tailwindcss 提供了很多原子化的样式，你可以很方便地设置界面样式。
@@ -122,11 +130,11 @@ toastr.error('内容', '标题');
 
 ## Vue 和 VueRouter
 
-让界面书写变得异常简单.
+用 `Vue` 和 `VueRouter` 变量访问. 让界面书写变得异常简单, 具体请参考官方文档或[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)中模板的示例.
 
 ## YAML
 
-允许你像 JavaScript 内置的 JSON 那样解析 yaml 语法。
+用 `YAML` 变量访问. 允许你像 JavaScript 内置的 JSON 那样解析 yaml 语法。
 
 :::info 示例
 :::code-group
@@ -174,7 +182,7 @@ toastr.error('内容', '标题');
 
 ## zod
 
-允许你简单地解析 JSON 等数据为特定类型:
+用 `z` 变量访问. 允许你简单地解析 JSON 等数据为特定类型:
 
 :::info 示例
 
