--- a/docs/guide/功能详情/其他辅助功能/其他工具函数.md
+++ b/docs/guide/功能详情/其他辅助功能/其他工具函数.md
@@ -142,6 +142,58 @@ function getScriptId(): string;
 
 - **脚本 id**: `string`
 
+## initializeGlobal
+
+将接口共享到全局, 使之在其他 iframe 中可用。
+
+其他 iframe 将能通过 `await waitGlobalInitialized(global)` 来等待初始化完毕, 从而用 `global` 为变量名访问该接口。
+
+```typescript
+function initializeGlobal(global: string, value: any): void;
+```
+
+### 参数
+
+#### `global`
+
+- **类型**: `string`
+- **描述**: 要共享的接口名称
+
+#### `value`
+
+- **类型**: `any`
+- **描述**: 要共享的接口内容
+
+### 示例
+
+```typescript
+initializeGlobal('Mvu', Mvu);
+```
+
+## waitGlobalInitialized
+
+等待其他 iframe 中共享出来的全局接口初始化完毕, 并使之在当前 iframe 中可用。
+
+这需要其他 iframe 通过 `initializeGlobal(global, value)` 来共享接口。
+
+```typescript
+function waitGlobalInitialized(global: LiteralUnion<'Mvu', string>): Promise<void>;
+```
+
+### 参数
+
+#### `global`
+
+- **类型**: `LiteralUnion<'Mvu', string>`
+- **描述**: 要初始化的全局接口名称, 当前已知的仅有 `Mvu`
+
+### 示例
+
+```typescript
+await waitGlobalInitialized('Mvu');
+...此后可以直接使用 Mvu
+```
+
 ## toastr
 
 导出了 `toastr` 库, 你现在可以用 `toastr.error('内容', '标题')` 而不是 `triggerSlash('/echo severity=error title=标题 内容')` 来进行酒馆提示了
