--- a/docs/guide/基本用法/如何正确使用酒馆助手.md
+++ b/docs/guide/基本用法/如何正确使用酒馆助手.md
@@ -11,4 +11,10 @@ order: 0
 - 酒馆助手前端界面
 - 酒馆助手脚本
 
-**请务必阅读[文档](https://stagedog.github.io/青空莉/工具经验/实时编写前端界面或脚本/).**
+**请务必阅读[酒馆助手前端界面或脚本编写配置及教程](https://stagedog.github.io/青空莉/工具经验/实时编写前端界面或脚本/).**
+
+如果你想要编写
+
+- 酒馆插件
+
+**请务必阅读[开发其他插件时使用](./开发其他插件时使用.md).**
