--- a/docs/guide/功能详情/预设操作/修改预设.md
+++ b/docs/guide/功能详情/预设操作/修改预设.md
@@ -106,6 +106,19 @@ preset.settings.should_stream = true;
 await replacePreset('in_use', preset);
 ```
 
+```typescript [为酒馆正在使用的预设添加一个提示词条目]
+const preset = getPreset('in_use');
+preset.prompts.push({
+  id: 'new_prompt',
+  name: '新提示词',
+  enabled: true,
+  position: { type: 'relative' },
+  role: 'user',
+  content: '新提示词内容',
+});
+await replacePreset('in_use', preset);
+```
+
 ```typescript [将 '预设A' 的条目按顺序复制到 '预设B' 开头]
 const preset_a = getPreset('预设A');
 const preset_b = getPreset('预设B');
@@ -167,6 +180,20 @@ const preset = await updatePresetWith('in_use', preset => {
   preset.settings.should_stream = true;
   return preset;
 });
+```
+
+```typescript [为酒馆正在使用的预设添加一个提示词条目]
+const preset = await updatePresetWith('in_use', preset => {
+  preset.prompts.push({
+    id: 'new_prompt',
+    name: '新提示词',
+    enabled: true,
+    position: { type: 'relative' },
+    role: 'user',
+    content: '新提示词内容',
+  });
+  return preset;
+}
 ```
 
 ```typescript [将 '预设A' 的条目按顺序复制到 '预设B' 开头]
