--- a/docs/guide/功能详情/版本操作.md
+++ b/docs/guide/功能详情/版本操作.md
@@ -13,7 +13,7 @@
 获取酒馆助手版本号。
 
 ```typescript
-function getTavernHelperVersion(): Promise<string>;
+function getTavernHelperVersion(): string;
 ```
 
 ### 返回值
@@ -22,7 +22,7 @@ function getTavernHelperVersion(): Promise<string>;
 
 ## updateTavernHelper
 
-尝试主动更新酒馆助手。
+尝试主动更新酒馆助手，将会导致页面刷新。
 
 ```typescript
 function updateTavernHelper(): Promise<boolean>;
