--- a/docs/guide/功能详情/世界书/修改世界书.md
+++ b/docs/guide/功能详情/世界书/修改世界书.md
@@ -104,7 +104,6 @@ interface ReplaceWorldbookOptions {
 :::code-group
 
 ```typescript [禁止所有条目递归, 保持其他设置不变]
-// 禁止所有条目递归, 保持其他设置不变
 const worldbook = await getWorldbook("eramgt少女歌剧");
 await replaceWorldbook(
   'eramgt少女歌剧',
@@ -170,9 +169,25 @@ type WorldbookUpdater =
 
 ### 示例
 
-```typescript [删除所有名字中包含 "神乐光" 的条目]
-await updateWorldbookWith("eramgt少女歌剧", worldbook => worldbook.filter(entry => entry.name.includes('神乐光')));
+:::code-group
+
+```typescript [禁止所有条目递归, 保持其他设置不变]
+await updateWorldbookWith('eramgt少女歌剧', worldbook => {
+  return worldbook.map(entry => ({
+    ...entry,
+    recursion: { prevent_incoming: true, prevent_outgoing: true, delay_until: null },
+  }));
+});
 ```
+
+```typescript [删除所有名字中包含 "神乐光" 的条目]
+await updateWorldbookWith('eramgt少女歌剧', worldbook => {
+  _.remove(worldbook, entry => entry.name.includes('神乐光'));
+  return worldbook;
+});
+```
+
+:::
 
 ## createWorldbookEntries
 
@@ -212,9 +227,13 @@ function createWorldbookEntries(
 
 ### 示例
 
+:::code-group
+
 ```typescript [创建两个条目, 一个标题叫 "神乐光", 一个留白]
 const { worldbook, new_entries } = await createWorldbookEntries('eramgt少女歌剧', [{ name: '神乐光' }, {}]);
 ```
+
+:::
 
 ## deleteWorldbookEntries
 
@@ -254,6 +273,10 @@ function deleteWorldbookEntries(
 
 ### 示例
 
+:::code-group
+
 ```typescript [删除所有名字中包含 "神乐光" 的条目]
 const { worldbook, deleted_entries } = await deleteWorldbookEntries('eramgt少女歌剧', entry => entry.name.includes('神乐光'));
 ```
+
+:::
